Minor refactoring and add a flag to compile to c++11

--- a/simulated-annealing/Makefile
+++ b/simulated-annealing/Makefile
@@ -1,7 +1,7 @@
 SRC = main.cpp instance.cpp solution.cpp
 
 all:
-	g++ $(SRC) -o salbp2-sa
+	g++ -std=c++11 $(SRC) -o salbp2-sa
 
 clean:
 	rm salbp2-sa
